--- a/public/templates/recipes/notesModal.html
+++ b/public/templates/recipes/notesModal.html
@@ -17,11 +17,17 @@
 
         <div class="modal-body-section">
           <h4>Notes</h4>
-          <p ng-repeat='note in notable.notes'>
+
+          <p ng-repeat='note in notable.notes' ng-if='owner'>
             <span editable-textarea='note.body' e-rows="2" onaftersave='updateNote(note)'>{{note.body}}</span> on {{note.updated_at | date:'short'}}
             <a href ng-click='deleteNote(note, $index)'>delete</a>
           </p>
-          <a href ng-click='addNote()'>+ add a note</a>
+
+          <p ng-repeat='note in notable.notes' ng-if='owner == false'>
+            <span>{{note.body}}</span> on {{note.updated_at | date:'short'}}
+          </p>
+
+          <a href ng-if='owner' ng-click='addNote()'>+ add a note</a>
         </div>
 
       </div>
