notes from 12-3 meeting and added avatars to seeds for fun

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -10,7 +10,7 @@
 
   <%= menu_group :pull => :right do %>
     <%= link_to "#/users/#{current_user.id}" do %>
-      <%= image_tag('https://cldup.com/QiXfZQ31vQ.jpg', class: "img img-thumbnail") %>
+      <%= image_tag current_user.profile.avatar.url, class: "img img-thumbnail" %>
     <% end %>
   <% end %>
 
