--- a/public/templates/dashboard/index.html
+++ b/public/templates/dashboard/index.html
@@ -1,15 +1,3 @@
-<h1>Following:</h1>
-
-<ul ng-repeat="follow in following">
-  <li>{{ follow.email }}</li>
-</ul>
-
-<h1>Followers:</h1>
-
-<ul ng-repeat="follower in followers">
-  <li>{{ follower.email }}</li>
-</ul>
-
 <h1>Followed Users</h1>
 
 <div class="row following">
@@ -19,13 +7,33 @@
     <div class="well">
       <div class="follow-img">
         <img class="img-responsive" ng-src="{{ follow.profile.avatar }}">
+        <!-- <a href class="btn btn-primary view">unfollow</a> -->
+        <!-- <a href="/#/users/{{ follow.id }}" class="btn btn-primary add">view profile</a> -->
+      </div>
+
+      <p><strong>{{ follow.profile.first_name }} {{ follow.profile.last_name }}</strong></p>
+      <p><strong>From: </strong>{{ follow.profile.location }}</p>
+      <a href ng-click="unfollow(follow)">unfollow</a>
+    </div>
+  </div>
+
+</div>
+
+<h1>Followers:</h1>
+
+<div class="row following">
+
+  <div ng-repeat="follower in followers | filter:filterText" class="item">
+
+    <div class="well">
+      <div class="follow-img">
+        <img class="img-responsive" ng-src="{{ follower.profile.avatar }}">
         <a href class="btn btn-primary view">unfollow</a>
         <a href="/#/users/{{ follow.id }}" class="btn btn-primary add">view profile</a>
       </div>
 
-      <p><strong>{{ follow.email }}</strong></p>
-      <p><strong>From: </strong>{{ follow.profile.location }}</p>
-      <p><strong>Recipes: </strong>{{ follow.recipes.length }}</p>
+      <p><strong>{{ follower.profile.first_name}} {{ follower.profile.last_name }}</strong></p>
+      <p><strong>From: </strong>{{ follower.profile.location }}</p>
     </div>
   </div>
 
