--- a/public/templates/dashboard/feed.html
+++ b/public/templates/dashboard/feed.html
@@ -16,7 +16,26 @@
 
     <div class="row">
       <div class="col-xs-3">
-        <img ng-src="{{ item.author.avatar }}" class="img-responsive">
+        <img ng-src="{{ item.author_avatar }}" class="img-responsive">
+      </div>
+
+      <div class="col-xs-9">
+        <strong>{{ item.target.title }}</strong> by {{ item.author.first_name }} {{ item.author.last_name }}
+
+        <br />
+
+        <em>link to original source: <a href="{{ item.target.url }}">click!</a></em>
+
+        <div class="row">
+          <div class="col-xs-6">
+            <a href="/#/recipes/{{item.target.id}}" class="btn btn-primary btn-block view">View recipe</a>
+          </div>
+
+          <div class="col-xs-6">
+            <a href ng-click="addRecipe(item.target)" class="btn btn-primary btn-block view">Add to my book</a>
+          </div>
+        </div>
+
       </div>
     </div>
 
