wire up add ingredient and instruction links

--- a/public/templates/recipes/show.html
+++ b/public/templates/recipes/show.html
@@ -85,7 +85,7 @@
             + add a note
           </a>
         </p>
-        <p><a>+ add an instruction</a></p>
+        <p><a href ng-click="addComponent('instructions')">+ add an instruction</a></p>
 
       </div>
 
@@ -109,7 +109,7 @@
             </tr>
           </tbody>
           <tfoot>
-            <td><a>+ add an ingredient</a></td>
+            <td><a href ng-click="addComponent('ingredients')">+ add an ingredient</a></td>
           </tfoot>
         </table>
 
