fixed navbar responsiveness

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,18 +1,20 @@
-<%= nav_bar :fixed => :top, :responsive => :true,
+<%= nav_bar :fixed => :top, :responsive => true,
           :brand => "Recipe Book", :brand_link => "#/dashboard/index" do %>
 
 
-  <%= menu_group :pull => :right do %>
-    <%= menu_item "#{current_user.email}", "#/users/#{current_user.id}" %>
-    <%= menu_item "Log Out", destroy_user_session_path, :method => :delete %>
-  <% end %>
-
-
-  <%= menu_group :pull => :right do %>
-    <%= link_to "#/users/#{current_user.id}" do %>
-      <%= image_tag current_user.profile.avatar.url, class: "img img-thumbnail" %>
+  <div class='pull-right'>
+    <%= menu_group :pull => :right do %>
+      <%= menu_item "#{current_user.email}", "#/users/#{current_user.id}" %>
+      <%= menu_item "Log Out", destroy_user_session_path, :method => :delete %>
     <% end %>
-  <% end %>
+
+
+  <!-- hide this on < 940px -->
+    <%= link_to "#/users/#{current_user.id}" do %>
+      <%= image_tag current_user.profile.avatar.url(:thumb), class: "img img-thumbnail" %>
+    <% end %>
+
+  </div>
 
 
 <% end %>
