fixed guest navbar responsiveness

--- a/app/views/shared/_navbar_guest.html.erb
+++ b/app/views/shared/_navbar_guest.html.erb
@@ -1,4 +1,4 @@
-<%= nav_bar :fixed => :top, :responsive => :true,
+<%= nav_bar :fixed => :top, :responsive => true,
           :brand => "Recipe Book", :brand_link => unauthenticated_root_path do %>
 
   <%= menu_group :pull => :right do %>
