refresh page on login

--- a/public/templates/sign_in.html
+++ b/public/templates/sign_in.html
@@ -31,7 +31,7 @@
           </div>
           <br>
           <!--  -->
-          <button class="btn btn-primary" ng-click="login()">We missed you!</button>
+          <button class="btn btn-primary" ng-click="login(); updatePage()">We missed you!</button>
           <br>
           <a href class='pull-right' ng-click="toggleRecover()">Forgot your password?</a>
         </div>
