change home navbar link

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,5 +1,5 @@
 <%= nav_bar :fixed => :top, :responsive => :true,
-          :brand => "Recipe Book", :brand_link => authenticated_root_path do %>
+          :brand => "Recipe Book", :brand_link => "/#/dashboard/index" do %>
 
 
   <%= menu_group :pull => :right do %>
