i don't remember, but a lot of stuff

--- a/public/templates/home.html
+++ b/public/templates/home.html
@@ -51,7 +51,7 @@
         <br />
         <input type="password" class="form-control" placeholder="Password Confirmation" ng-model='credentials.password_confirmation'>
         <br>
-        <button class="btn btn-primary" ng-click="signup()">Let's go!</button>
+        <button class="btn btn-primary" ng-click="signup(); updatePage()">Let's go!</button>
       </div>
 
     </div>
