--- a/public/templates/dashboard/index.html
+++ b/public/templates/dashboard/index.html
@@ -22,9 +22,13 @@
           </div>
         </div>
 
+        <div ng-if="following.length == 0">
+          <h3>Go follow some users to see them listed here!</h3>
+        </div>
+
       </div>
 
-      <h1>My Followers</h1>
+      <h1 class="text-center">My Followers</h1>
 
       <div class="row following">
 
@@ -41,6 +45,10 @@
             <p><strong>From: </strong>{{ follower.profile.location }}</p>
             <a href="/#/users/{{ follower.id }}" class="btn btn-primary">view profile</a>
           </div>
+        </div>
+
+        <div ng-if="followers.length == 0">
+          <h3>Users who are following you will appear here!</h3>
         </div>
 
       </div>
@@ -79,7 +87,7 @@
                 <a href="/#/recipes/{{item.target.id}}" class="btn btn-primary btn-block view">View recipe</a>
               </div>
 
-              <div class="col-xs-6">
+              <div class="col-xs-6 add-to-book">
                 <a href ng-click="addRecipe(item.target)" class="btn btn-primary btn-block view">Add to my book</a>
               </div>
             </div>
@@ -101,10 +109,31 @@
             </div>
           </div>
 
+          <div class="col-xs-9" ng-if="item.type == 'share'">
+            <strong>{{ item.target.title }}</strong> by {{ item.author.first_name }} {{ item.author.last_name }}
+
+            <br />
+
+            <em>link to original source: <a href="{{ item.target.url }}">click!</a></em>
+
+            <div class="row">
+              <div class="col-xs-6">
+                <a href="/#/recipes/{{item.target.id}}" class="btn btn-primary btn-block view">View recipe</a>
+              </div>
+
+              <div class="col-xs-6 add-to-book">
+                <a href ng-click="addRecipe(item.target)" class="btn btn-primary btn-block view">Add to my book</a>
+              </div>
+            </div>
+          </div>
+
         </div>
-
-
       </div>
+
+      <div ng-if="newsfeed.length == 0">
+        <h3 class="text-center">See followed users' activity here!</h3>
+      </div>
+
     </div>
 
   </div>
