--- a/public/templates/recipes/shareModal.html
+++ b/public/templates/recipes/shareModal.html
@@ -6,9 +6,9 @@
 
         <button type="button" class="close" ng-click="close('Cancel')" data-dismiss="modal" aria-hidden="true">&times;</button>
 
-        <p class="modal-title">
-          title
-        </p>
+        <h3 class="modal-title">
+          Share this recipe with another user!
+        </h3>
 
       </div>
 
@@ -22,6 +22,9 @@
             <select class="form-control" ng-model="selectedUser">
               <option ng-repeat="user in allFollowing" value="{{user.id}}">{{ user.profile.first_name }} {{ user.profile.last_name }}</option>
             </select>
+
+            <br />
+            
             <button type="button" ng-click="shareRecipe()" class="btn btn-primary text-right" data-dismiss="modal">Share recipe</button>
           </div>
         </div>
