--- a/public/templates/recipes/show.html
+++ b/public/templates/recipes/show.html
@@ -61,23 +61,22 @@
 
     <div class='row text-center'>
 
-      <div class='col-sm-8'>
+      <div class='col-md-8'>
         <h2 class='edit-field' editable-textarea='recipe.title' e-rows="1" e-cols="60" onaftersave='updateRecipe()'>{{ recipe.title }}</h2>
         <h3 editable-textarea='recipe.author' e-rows="1" e-cols="40" onaftersave='updateRecipe()'>{{ recipe.author }}</h3>
         <p editable-textarea='recipe.description' e-rows="4" e-cols="90"  onaftersave='updateRecipe()'>{{ recipe.description }}</p>
       </div>
 
-      <div class='col-sm-4'>
+      <div class='col-md-4'>
         <img ng-src="{{ recipe.photo_url }}" class='img img-responsive'>
       </div>
 
     </div>
 
 
-
     <div class='row'>
 
-      <div class='col-sm-8'>
+      <div class='col-md-8'>
 
         <h4>Instructions</h4>
 
@@ -98,7 +97,7 @@
       </div>
 
 
-      <div class='col-sm-4'>
+      <div class='col-md-4'>
 
         <h4>Ingredients</h4>
 
@@ -137,13 +136,13 @@
 
     <div class='row text-center'>
 
-      <div class='col-sm-8'>
+      <div class='col-md-8'>
         <h2>{{ recipe.title }}</h2>
         <h3>{{ recipe.author }}</h3>
         <p>{{ recipe.description }}</p>
       </div>
 
-      <div class='col-sm-4'>
+      <div class='col-md-4'>
         <img ng-src="{{ recipe.photo_url }}" class='img img-responsive'>
       </div>
 
@@ -153,7 +152,7 @@
 
     <div class='row'>
 
-      <div class='col-sm-8'>
+      <div class='col-md-8'>
         <h4>Directions</h4>
         <p ng-repeat="instruction in recipe.instructions | orderBy:'id'">
           <span>
@@ -166,7 +165,7 @@
         </p>
       </div>
 
-      <div class='col-sm-4'>
+      <div class='col-md-4'>
         <h4>Ingredients</h4>
 
         <table class='table table-condensed'>
