--- a/public/templates/recipes/show.html
+++ b/public/templates/recipes/show.html
@@ -64,7 +64,7 @@
       <div class='col-md-8'>
         <h2 class='edit-field' editable-textarea='recipe.title' e-rows="1" e-cols="60" onaftersave='updateRecipe()'>{{ recipe.title }}</h2>
         <h3 editable-textarea='recipe.author' e-rows="1" e-cols="40" onaftersave='updateRecipe()'>{{ recipe.author }}</h3>
-        <p editable-textarea='recipe.description' e-rows="4" e-cols="90"  onaftersave='updateRecipe()'>{{ recipe.description }}</p>
+        <p editable-textarea='recipe.description' e-rows="4" e-cols="80"  onaftersave='updateRecipe()'>{{ recipe.description }}</p>
       </div>
 
       <div class='col-md-4'>
@@ -81,7 +81,7 @@
         <h4>Instructions</h4>
 
         <p ng-repeat="instruction in recipe.instructions | orderBy:'id'" ng-mouseenter='showAddNote(instruction)' ng-mouseleave='hideAddNotes()'>
-          <span editable-textarea='instruction.body' e-rows="4" onaftersave='updateRecipe()'>
+          <span editable-textarea='instruction.body' e-rows="4" e-cols="80" onaftersave='updateRecipe()'>
             {{ instruction.body }}
           </span>
 
@@ -104,7 +104,9 @@
         <table class='table table-condensed'>
           <tbody>
             <tr ng-repeat="ingredient in recipe.ingredients  | orderBy:'id'" ng-mouseenter='showAddNote(ingredient)' ng-mouseleave='hideAddNotes()'>
-              <td editable-textarea='ingredient.body' e-rows="2" onaftersave='updateRecipe()'>{{ ingredient.body }}</td>
+              <td>
+                <div editable-text='ingredient.body' onaftersave='updateRecipe()'>{{ ingredient.body }}</div>
+              </td>
               <td>
                 <a href ng-if='!notesEmpty(ingredient)' ng-click="openModal(ingredient, 'Ingredient')" title='{{ noteCount(ingredient) }}'>
                   <span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span>
